--- a/TestApp2/index.html
+++ b/TestApp2/index.html
@@ -14,7 +14,7 @@
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
-    <p>ERG</p>
+    <p id="test">ERG</p>
 
     <!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
