--- a/TestApp2/index.html
+++ b/TestApp2/index.html
@@ -21,5 +21,27 @@
     <script src="scripts/platformOverrides.js"></script>
 
     <script src="scripts/index.js"></script>
+    <script type="text/javascript">
+
+
+        // DO NOT REMOVE : GLOBAL FUNCTIONS!
+
+        $(document).ready(function () {
+
+            pageSetUp();
+
+            $.ajax({
+                type: "POST",
+                url: "http://erg-cal-iis2/Test1/functions.aspx/opencount",
+                data: "{}",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (msg) {
+                    $("#test").html(msg.d);
+                }
+            });
+        })();
+           </script>
+
 </body>
 </html>
